external-crates/move/crates/move-compiler/tests/move_2024/typing/dot_call_private.exp
error[E04001]: restricted visibility
   ┌─ tests/move_2024/typing/dot_call_private.move:18:5
   │
 7 │ fun f(_self: &X) {}
   │     - This function is internal to its module. Only 'public', 'public(friend)', and 'public(package)' functions can be called outside of their module
   ·
18 │     x.f();
   │     ^^^^^ Invalid call to internal function '0x42::t::f'

error[E04001]: restricted visibility
   ┌─ tests/move_2024/typing/dot_call_private.move:19:5
   │
 7 │ fun f(_self: &X) {}
   │     - This function is internal to its module. Only 'public', 'public(friend)', and 'public(package)' functions can be called outside of their module
   ·
19 │     y.x.f();
   │     ^^^^^^^ Invalid call to internal function '0x42::t::f'

